@@ -1,3 +1,14 @@
+2008-11-24  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* wiki.pl (GetEditForm): Added the 'upload' class attribute to 
+	upload links produced by this function, for CSS stylization.
+	(BrowsePage): Calls the new "PrintPageContent" function.
+	(PrintPageContent): New function, whose implementation has been
+	extracted from the "BrowsePage" function. This permits external
+	modules -- like the new Crossbar module -- to override this
+	function and thereby print page content in a module-specific
+	manner.
+
 2008-11-21  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
 	* wiki.pl (SetHtmlEnvironmentContainer): Corrected a slight, but
